[gd_scene load_steps=5 format=2]

[ext_resource path="res://DoHoa/MotSoThuKhac/Light/Boss/VongXoay.png" type="Texture" id=1]
[ext_resource path="res://DanHacAm.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 16.3776

[sub_resource type="Animation" id=2]
resource_name = "Hoạt ảnh mới"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="DanHacAm" type="Area2D"]
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.341176, 0.0627451, 0.0509804, 1 )
position = Vector2( -0.418121, 0 )
rotation = 2.24492
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.836243, -1.25436 )
rotation = 0.785398
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1.57356e-05, -1.25437 )
scale = Vector2( 1.3345, 1.45993 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Hoạt ảnh mới"
"anims/Hoạt ảnh mới" = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Dan_DaHacAm_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
